--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -27,6 +27,7 @@
 .testimony {
     font-size: 1.2rem;
     font-style: oblique;
+    font-weight: 300;
     line-height: 2.3rem;
     margin: 2rem auto;
     width: 70%;
