--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -77,6 +77,23 @@
     width: 80%;
 }
 
+.download-cv {
+    border: 2px solid var(--red);
+    color: var(--red);
+    display: block;
+    font-weight: 700;
+    margin: 0 auto 2rem;
+    padding: 0.4rem 1rem;
+    transition: all 200ms ease-in-out;
+    width: 250px;
+}
+
+.download-cv:hover {
+    background-color: var(--red);
+    color: var(--primary-dark);
+    text-decoration: none;
+}
+
 /* FEATURES */
 
 .features {
@@ -87,6 +104,10 @@
 .feature {
     margin: 2rem 0;
     user-select: none;
+}
+
+.feature-title {
+    font-size: 1.4rem;
 }
 
 .feature-title span {
